(kitty) fix: font names

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -7,9 +7,9 @@
 #: characters.
 
 font_family      Source Code Pro Semibold
-bold_font        Source Code Pro Heavy
+bold_font        Source Code Pro Bold
 italic_font      Source Code Pro Semibold Italic
-bold_italic_font Source Code Program Heavy Italic
+bold_italic_font Source Code Pro Bold Italic
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
