(tmux) no border for popup window

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -38,7 +38,7 @@ set -g mode-style "fg=terminal,bg=colour8"
 bind -n M-t if-shell -F '#{==:#{session_name},popup}' {
    detach-client
 } {
-   display-popup -E -d '#{pane_current_path}' -w100% -h100% -- "tmux attach -t popup || tmux new -s popup"
+   display-popup -E -B -d '#{pane_current_path}' -w100% -h100% -- "tmux attach -t popup || tmux new -s popup"
 }
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
