--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,7 +2,8 @@
 set-option -g mouse on
 # let colors pass through
 set -g default-terminal "tmux-256color"
-set-option -g allow-rename on
+# don't allow programs running in a pane to change the window title with an escape sequence
+set-option -g allow-rename off
 # Let tmux automatically rename windows, unless I manually set a name for that window
 set -g automatic-rename on
 set-option -g renumber-windows on
