(tmux) add default command

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -17,6 +17,9 @@ set -g pane-border-format ''
 set-option -g display-time 1500
 set-option -g set-titles on
 set-option -g set-titles-string '#T'
+# By setting a default-command, tmux won't create a login shell.
+# The 'exec' is there so that tmux-resurrect works properly.
+set -g default-command "exec ${SHELL}"
 
 # Create a new window using the current pane's directory as the new window's directory
 bind c new-window -c "#{pane_current_path}"
