--- a/install/install.conf.yaml
+++ b/install/install.conf.yaml
@@ -60,6 +60,7 @@
     ~/.config/pipr/pipr.toml: pipr/pipr.toml
     ~/.config/brewfile/Brewfile: brew/Brewfile
     ~/.config/pipx/pipx-packages: pipx/pipx-packages
+    ~/.config/viddy.toml: viddy/viddy.toml
 
 # Using another link directive since I have multiple links to this directory and you can't have
 # multiple keys with the same name in YAML
