--- a/kitty/day-theme.conf
+++ b/kitty/day-theme.conf
@@ -4,11 +4,11 @@ background            #fdf6e3
 foreground            #52676f
 cursor                #52676f
 # should match color8
-selection_background  #f6de9c
+selection_background  #EEEAD7
 selection_foreground  none
 url_color #d75f00
-color0 #b8b095
-color8 #f6de9c
+color0 #9d9e99
+color8 #EEEAD7
 color1 #d70000
 color9 #d70000
 color2 #5f8700
