make terminal colorscheme look ok in a tty

--- a/kitty/day-theme.conf
+++ b/kitty/day-theme.conf
@@ -7,7 +7,7 @@ cursor                #52676f
 selection_background  #EEEAD7
 selection_foreground  none
 url_color #d75f00
-color0 #9d9e99
+color0 #fdf6e3
 color8 #EEEAD7
 color1 #d70000
 color9 #d70000
@@ -22,7 +22,7 @@ color13 #5f5faf
 color6 #00afaf
 color14 #52676f
 color7 #262626
-color15 #1c1c1c
+color15 #9d9e99
 color17 #FFD7D7
 color18 #D7FFD7
 
