--- a/kitty/night-theme.conf
+++ b/kitty/night-theme.conf
@@ -1,10 +1,3 @@
-# vim:ft=kitty
-## name: Nord
-## author: Connor Holyday
-## license: MIT
-## upstream: https://raw.githubusercontent.com/connorholyday/nord-kitty/master/nord.conf
-## blurb: An arctic, north-bluish clean and elegant Kitty theme.
-
 # Nord Colorscheme for Kitty
 # Based on:
 # - https://gist.github.com/marcusramberg/64010234c95a93d953e8c79fdaf94192
@@ -20,7 +13,7 @@ cursor                #D8DEE9
 
 # black
 # more contrast with background (e.g. comments)
-color0   #626f89
+color0   #232731
 # less contrast with background (e.g. status bar)
 color8   #333745
 
@@ -50,4 +43,4 @@ color14  #8FBCBB
 
 # white
 color7   #E5E9F0
-color15  #ECEFF4
+color15  #626f89
