--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -37,6 +37,7 @@ bind-key -n M-L next-window
 bind-key -n M-m resize-pane -Z
 # change highlight color
 set -g mode-style "fg=terminal,bg=colour8"
+set -g fill-character ' '
 
 # popup
 bind -n M-t if-shell -F '#{==:#{session_name},popup}' {
@@ -66,7 +67,8 @@ set -g pane-border-lines simple
 set -g pane-active-border-style "fg=#{@activecolor}"
 set -g pane-border-style "fg=#{@bordercolor}"
 # Clock Mode
-setw -g clock-mode-colour 'cyan'
+set -g clock-mode-colour 'cyan'
+set -g clock-mode-style 24
 # Messages
 set -g message-style "bg=#{@bgcolor},fg=#{@standoutcolor}"
 # Bars
