--- a/install/install.conf.yaml
+++ b/install/install.conf.yaml
@@ -13,6 +13,7 @@
     ~/: {}
     ~/.vim: {}
     ~/.local/bin: {}
+    ~/.local/share/nvim: {}
 
 - link:
     ~/.tmux.conf: tmux/tmux.conf
@@ -21,7 +22,7 @@
     ~/.config/nvim/plugin/:
         glob: true
         path: neovim/plugin/*
-    ~/.local/share/nvim/external-plugin-snapshot.vim: neovim/external-plugin-snapshot.vim
+    ~/.local/share/nvim/vim-plug-snapshot.vim: neovim/vim-plug-snapshot.vim
     ~/.gitconfig: git/gitconfig
     ~/.bashrc: bash/bashrc
     ~/.profile: bash/profile
