(tmux) add binding for switching sessions

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -38,6 +38,7 @@ bind-key -n M-m resize-pane -Z
 # change highlight color
 set -g mode-style "fg=terminal,bg=colour8"
 set -g fill-character ' '
+bind-key -n M-s choose-tree -Zw
 
 # popup
 bind -n M-t if-shell -F '#{==:#{session_name},popup}' {
