--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -6,9 +6,9 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      Source Code Pro Semibold
+font_family      Source Code Pro
 bold_font        Source Code Pro Bold
-italic_font      Source Code Pro Semibold Italic
+italic_font      Source Code Pro Italic
 bold_italic_font Source Code Pro Bold Italic
 
 #: You can specify different fonts for the bold/italic/bold-italic
@@ -46,7 +46,7 @@ font_size 13.0
 #: support, because it will force kitty to always treat the text as
 #: LTR, which FriBidi expects for terminals.
 
-# adjust_line_height  100%
+adjust_line_height  110%
 # adjust_column_width 0
 
 #: Change the size of each character cell kitty renders. You can use
