(tmux) use a different save strategy for linux

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -98,6 +98,8 @@ set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 # allows saving the state of tmux to a file so it can be restored later
 set -g @plugin 'tmux-plugins/tmux-resurrect'
     set -g @resurrect-processes 'watch mosh-client vim nvim ssh man less tail fzf "git ui" gitui ncdu "~tmux-nest" cloudflared'
+    # This strategy can restore quotes, unlike the default strategy.
+    if-shell "uname | grep -q Linux" "set -g @resurrect-save-command-strategy 'linux_procfs'"
 # auto reload ~/.tmux.conf when it changes
 set-option -g @plugin 'b0o/tmux-autoreload'
 set -g @plugin 'bigolu/tmux-mode-indicator'
