(tmux) thicker border lines

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -64,7 +64,7 @@ set -g @bordercolor 'colour8'
 set -g @standoutcolor 'brightyellow'
 set -g @bgcolor 'colour8'
 # Panes
-set -g pane-border-lines simple
+set -g pane-border-lines heavy
 set -g pane-active-border-style "fg=#{@activecolor}"
 set -g pane-border-style "fg=#{@bordercolor}"
 # Clock Mode
