(tmux) make session text background grey

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -110,7 +110,7 @@ set -g @plugin 'bigolu/tmux-mode-indicator'
     set -g @mode_indicator_sync_prompt ' -- SYNC -- '
     set -g @mode_indicator_sync_mode_style 'bg=terminal,fg=#{@standoutcolor},reverse'
     set -g @mode_indicator_empty_prompt ' #S '
-    set -g @mode_indicator_empty_mode_style 'bg=terminal,fg=#{@activecolor},reverse'
+    set -g @mode_indicator_empty_mode_style 'bg=terminal,fg=colour15,reverse'
 set -g @plugin 'MunifTanjim/tmux-suspend'
     set -g @suspend_key 'M-z'
     set -g @suspend_suspended_options " \
