--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -19,11 +19,14 @@ brew "less"
 brew "moreutils"
 brew "mosh"
 brew "navi"
+brew "ncdu"
 brew "neovim", args: ["HEAD"]
 brew "pipx"
 brew "ripgrep"
 brew "ruby"
 brew "shellcheck"
+brew "subversion"
+brew "tealdeer"
 brew "tmux"
 brew "tree"
 brew "viddy"
