--- a/kitty/day-theme.conf
+++ b/kitty/day-theme.conf
@@ -6,25 +6,52 @@ cursor                #52676f
 # should match color8
 selection_background  #EEEAD7
 selection_foreground  none
-url_color #d75f00
+url_color #cb4b16
 color0 #fdf6e3
 color8 #EEEAD7
-color1 #d70000
-color9 #d70000
-color2 #5f8700
-color10 #5f8700
-color3 #af8700
-color11 #d75f00
-color4 #0087ff
-color12 #0087ff
-color5 #af005f
-color13 #5f5faf
-color6 #00afaf
-color14 #52676f
+color1 #dc322f
+color9 #dc322f
+color2 #859900
+color10 #859900
+color3 #b58900
+color11 #cb4b16
+color4 #268bd2
+color12 #268bd2
+color5 #6c71c4
+color13 #d33682
+color6 #2aa198
+color14 #2aa198
 color7 #262626
 color15 #9d9e99
 color17 #FFD7D7
 color18 #D7FFD7
+
+# # Sublime Merge Light Theme
+# background            #f9fafa
+# foreground            #121214
+# cursor                #52676f
+# # should match color8
+# selection_background  #ebedef
+# selection_foreground  none
+# url_color #d75f00
+# color0 #f9fafa
+# color8 #ebedef
+# color1 #de3d3b
+# color9 #de3d3b
+# color2 #5f8700
+# color10 #5f8700
+# color3 #ff8902
+# color11 #ff8902
+# color4 #407fbf
+# color12 #67b2e9
+# color5 #ca9cd0
+# color13 #ca9cd0
+# color6 #00afaf
+# color14 #00afaf
+# color7 #121214
+# color15 #5f7479
+# color17 #FFD7D7
+# color18 #D7FFD7
 
 # # Light Owl Colorscheme
 # background            #FBFBFB
