--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -6,10 +6,10 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      Source Code Pro
-bold_font        Source Code Pro Bold
-italic_font      Source Code Pro Italic
-bold_italic_font Source Code Pro Bold Italic
+font_family      Source Code Pro Medium
+bold_font        Source Code Pro Medium Bold
+italic_font      Source Code Pro Medium Italic
+bold_italic_font Source Code Pro Medium Bold Italic
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
@@ -23,7 +23,7 @@ bold_italic_font Source Code Pro Bold Italic
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 13.0
+font_size 12.5
 
 #: Font size (in pts)
 
@@ -46,8 +46,8 @@ font_size 13.0
 #: support, because it will force kitty to always treat the text as
 #: LTR, which FriBidi expects for terminals.
 
-adjust_line_height  110%
-# adjust_column_width 0
+adjust_line_height  100%
+adjust_column_width 104%
 
 #: Change the size of each character cell kitty renders. You can use
 #: either numbers, which are interpreted as pixels or percentages
@@ -78,7 +78,7 @@ adjust_line_height  110%
 
 #:     symbol_map codepoints Font Family Name
 
-# disable_ligatures never
+disable_ligatures cursor
 
 #: Choose how you want to handle multi-character ligatures. The
 #: default is to always render them.  You can tell kitty to not render
@@ -298,7 +298,7 @@ mouse_hide_wait 0
 #: URLs under the mouse cursor. By default, all characters legal in
 #: URLs are allowed.
 
-copy_on_select yes
+copy_on_select clipboard
 
 #: Copy to clipboard or a private buffer on select. With this set to
 #: clipboard, simply selecting text with the mouse will cause the text
@@ -564,7 +564,7 @@ enable_audio_bell no
 #: values set top, horizontal and bottom. Four values set top, right,
 #: bottom and left.
 
-window_padding_width 2
+window_padding_width 2 0 4 0
 
 #: The window padding (in pts) (blank area between the text and the
 #: window border). A single value sets all four sides. Two values set
