--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,3 +1,5 @@
+# vim:foldmethod=marker
+
 # allow mouse use
 set-option -g mouse on
 # let colors pass through
@@ -17,20 +19,24 @@ set -g pane-border-format ''
 set-option -g display-time 1500
 set-option -g set-titles on
 set-option -g set-titles-string '#T'
-# By setting a default-command, tmux won't create a login shell.
-# The 'exec' is there so that tmux-resurrect works properly.
+# By setting a default-command, tmux won't use its default behaviour which creates a login shell
+# for new windows. The 'exec' is there so that tmux-resurrect works properly.
 set -g default-command "exec ${SHELL}"
+# When a client becomes active, run attach-session which will update the environment
+set-hook -g client-active attach-session
+set-option -g allow-passthrough on
+# The output from ':checkhealth' in neovim says 'autoread' might not work if this isn't set.
+set-option -g focus-events on
+set-option -g set-clipboard external
 
 # Create a new window using the current pane's directory as the new window's directory
-bind c new-window -c "#{pane_current_path}"
+bind t new-window -c "#{pane_current_path}"
 # split panes horizontally/vertically using the current pane's directory as the new pane's directory
 bind '|' split-window -h -c '#{pane_current_path}'
 bind '-' split-window -v -c '#{pane_current_path}'
 # reload
-bind r run-shell 'tmux source ~/.tmux.conf && tmux display-message "#[bg=terminal,fg=#{@standoutcolor},reverse] Reloaded TMUX "'
-# use alt/meta + arrow to navigate windows
-bind-key -n M-Left previous-window
-bind-key -n M-Right next-window
+bind r run-shell -b 'tmux source ~/.tmux.conf\; set @mode_indicator_custom_mode_style "bg=#{@bgcolor},fg=#{@standoutcolor},bold,reverse"\; set @mode_indicator_custom_prompt " RELOADED "\; refresh-client -S; sleep 1; tmux set -u @mode_indicator_custom_prompt\; set -u @mode_indicator_custom_mode_style\; refresh-client -S'
+# navigate windows
 bind-key -n M-H previous-window
 bind-key -n M-L next-window
 # toggle zoom on pane
@@ -39,12 +45,17 @@ bind-key -n M-m resize-pane -Z
 set -g mode-style "fg=terminal,bg=colour8"
 set -g fill-character ' '
 bind-key -n M-s choose-tree -ZsN
+# resize panes
+bind-key -n M-Left resize-pane -L
+bind-key -n M-Right resize-pane -R
+bind-key -n M-Up resize-pane -U
+bind-key -n M-Down resize-pane -D
 
 # popup
 bind -n M-t if-shell -F '#{==:#{session_name},popup}' {
    detach-client
 } {
-   display-popup -E -B -d '#{pane_current_path}' -w100% -h100% -- "tmux attach -t popup || tmux new -s popup"
+   display-popup -E -d '#{pane_current_path}' -w100% -h100% -- "tmux attach -t popup || tmux new -s popup"
 }
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
@@ -55,73 +66,94 @@ bind-key -n M-j if-shell "$is_vim" 'send-keys M-j'  'select-pane -D'
 bind-key -n M-k if-shell "$is_vim" 'send-keys M-k'  'select-pane -U'
 bind-key -n M-l if-shell "$is_vim" 'send-keys M-l'  'select-pane -R'
 
+# Aesthetics {{{
 # status bar configuration
-#######################################
 set -g status-position bottom
-set -g pane-border-status off
+set -g pane-border-status bottom
 set -g @activecolor 'brightcyan'
 set -g @bordercolor 'colour8'
 set -g @standoutcolor 'brightyellow'
-set -g @bgcolor 'colour8'
+set -g @bgcolor 'terminal'
+
 # Panes
-set -g pane-border-lines heavy
-set -g pane-active-border-style "fg=#{@activecolor}"
+set -g pane-border-lines single
+set -g pane-active-border-style "fg=#{@activecolor},dim"
 set -g pane-border-style "fg=#{@bordercolor}"
+
 # Clock Mode
 set -g clock-mode-colour 'cyan'
 set -g clock-mode-style 24
+
 # Messages
 set -g message-style "bg=#{@bgcolor},fg=#{@standoutcolor}"
+
 # Bars
 set -g status-interval 1
 set -g status on
-set -g status-style "bg=#{@bgcolor},fg=#{@bordercolor},nobold"
-set -g status-right " "
-set -g status-left-length 40
-set -g status-left "#{tmux_mode_indicator}"
+set -g status-style "bg=#{@bgcolor},fg=#{@bordercolor}"
+set -g status-right "#[bg=terminal,fg=colour15,bold] ＋ #[bg=terminal,fg=colour0]"
+bind-key -T root MouseDown1StatusRight new-window -c "#{pane_current_path}"
+set -g status-left-length 999
+set -g status-right-length 999
+set -g status-left "#[bg=#{@bgcolor},fg=terminal] #S#{?#{m/r:tty[0-9]*,#{client_tty}}, #[fg=colour15]∙#[fg=terminal] %A#, %B %-e %H:%M#{?#{battery_percentage}, #[fg=colour15]∙#[fg=terminal] #[fg=colour3]⌁#[fg=terminal]#{battery_percentage},} #[fg=colour15]∙#{?#{==:#{online_status},online},#[fg=colour4],#[fg=colour1]} 🜃 #[fg=terminal]#{online_status},} #{tmux_mode_indicator}"
+
 # Windows
 set -g status-justify right
-set -g window-status-format "#[fg=#{@activecolor},dim,nobold]#W"
-set -g window-status-current-format "#[#{?window_zoomed_flag,fg=#{@standoutcolor},fg=#{@activecolor}},bold]#W#F"
-set -g window-status-separator "#[bg=terminal,fg=colour8,reverse,bold] / "
+set -g window-status-format "#[fg=terminal] #W "
+set -g window-status-current-format " #[fg=terminal,underscore]#W#{?window_zoomed_flag,#[fg=#{@standoutcolor}] [MAX],}#[nounderscore] "
+set -g window-status-separator "#[bg=terminal,fg=colour8] "
 
-set -g popup-border-lines rounded
-set -g popup-border-style "fg=black"
+set -g popup-border-lines heavy
+set -g popup-border-style "fg=#{@bordercolor}"
+# }}}
 
-# Plugins
-#######################################
+# Plugins {{{
 # tmux plugin manager
 set -g @plugin 'tmux-plugins/tpm'
+
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
     set -g @scroll-without-changing-pane "on"
     set -g @emulate-scroll-for-no-mouse-alternate-buffer "on"
-# allows saving the state of tmux to a file so it can be restored later
+
+# Saves the state of tmux to a file so it can be restored later
 set -g @plugin 'tmux-plugins/tmux-resurrect'
     set -g @resurrect-processes 'watch mosh-client vim nvim ssh man less tail fzf "git ui" gitui ncdu "~tmux-nest" cloudflared'
     # This strategy can restore quotes, unlike the default strategy.
     if-shell "uname | grep -q Linux" "set -g @resurrect-save-command-strategy 'linux_procfs'"
+
 # auto reload ~/.tmux.conf when it changes
 set-option -g @plugin 'b0o/tmux-autoreload'
-set -g @plugin 'bigolu/tmux-mode-indicator'
-    set -g @mode_indicator_prefix_prompt ' -- PREFIX -- '
-    set -g @mode_indicator_prefix_mode_style 'bg=terminal,fg=#{@standoutcolor},reverse'
-    set -g @mode_indicator_copy_prompt ' -- COPY -- '
-    set -g @mode_indicator_copy_mode_style 'bg=terminal,fg=#{@standoutcolor},reverse'
-    set -g @mode_indicator_sync_prompt ' -- SYNC -- '
-    set -g @mode_indicator_sync_mode_style 'bg=terminal,fg=#{@standoutcolor},reverse'
-    set -g @mode_indicator_empty_prompt ' #S '
-    set -g @mode_indicator_empty_mode_style 'bg=terminal,fg=colour15,reverse'
+
+set -g @plugin 'MunifTanjim/tmux-mode-indicator'
+    set -g @mode_indicator_prefix_prompt ' PREFIX '
+    set -g @mode_indicator_prefix_mode_style 'bg=#{@bgcolor},fg=#{@standoutcolor},bold,reverse'
+    set -g @mode_indicator_copy_prompt ' COPY '
+    set -g @mode_indicator_copy_mode_style 'bg=#{@bgcolor},fg=#{@standoutcolor},bold,reverse'
+    set -g @mode_indicator_sync_prompt ' SYNC '
+    set -g @mode_indicator_sync_mode_style 'bg=#{@bgcolor},fg=#{@standoutcolor},bold,reverse'
+    set -g @mode_indicator_empty_prompt ' '
+    set -g @mode_indicator_empty_mode_style 'bg=#{@bgcolor}'
+
 set -g @plugin 'MunifTanjim/tmux-suspend'
     set -g @suspend_key 'M-z'
     set -g @suspend_suspended_options " \
-        @mode_indicator_custom_prompt:: -- SUSPENDED -- , \
-        @mode_indicator_custom_mode_style::bg=terminal\\,fg=#{@standoutcolor}\\,reverse, \
+        @mode_indicator_custom_prompt:: SUSPENDED , \
+        @mode_indicator_custom_mode_style::bg=#{@bgcolor}\\,fg=#{@standoutcolor}\\,bold\\,reverse, \
         pane-active-border-style::fg=#{@standoutcolor}, \
     "
+
+set -g @plugin 'tmux-plugins/tmux-battery'
+
+set -g @plugin 'tmux-plugins/tmux-online-status'
+    set -g @online_icon "online"
+    set -g @offline_icon "offline"
+
 # Uses tmux-resurrect to continuously save the current tmux session at a specified interval.
 # NOTE: continuum must be the last plugin listed: https://github.com/tmux-plugins/tmux-continuum#known-issues
 set -g @plugin 'tmux-plugins/tmux-continuum'
     set -g @continuum-restore 'on' # Automatically restore session when tmux is started
     set -g @continuum-save-interval '1' # measured in minutes
+
 # Start the plugin manager
 run '~/.tmux/plugins/tpm/tpm'
+# }}}
