--- a/kitty/night-theme.conf
+++ b/kitty/night-theme.conf
@@ -15,7 +15,7 @@ cursor                #D8DEE9
 # more contrast with background (e.g. comments)
 color0   #232731
 # less contrast with background (e.g. status bar)
-color8   #2E3440
+color8   #2c323d
 
 # red
 color1   #BF616A
