(kitty) colorscheme changes

--- a/kitty/day-theme.conf
+++ b/kitty/day-theme.conf
@@ -4,11 +4,11 @@ background            #fdf6e3
 foreground            #52676f
 cursor                #52676f
 # should match color8
-selection_background  #EEEAD7
+selection_background  #eee8d5
 selection_foreground  none
 url_color #cb4b16
 color0 #fdf6e3
-color8 #EEEAD7
+color8 #eee8d5
 color1 #dc322f
 color9 #dc322f
 color2 #859900
@@ -17,8 +17,8 @@ color3 #b58900
 color11 #cb4b16
 color4 #268bd2
 color12 #268bd2
-color5 #6c71c4
-color13 #d33682
+color5 #d33682
+color13 #6c71c4
 color6 #2aa198
 color14 #2aa198
 color7 #262626
