--- a/kitty/night-theme.conf
+++ b/kitty/night-theme.conf
@@ -7,7 +7,7 @@ foreground            #D8DEE9
 background            #232731
 selection_foreground  none
 # should match color8
-selection_background  #333745
+selection_background  #2e3440
 url_color             #0087BD
 cursor                #D8DEE9
 
@@ -15,7 +15,7 @@ cursor                #D8DEE9
 # more contrast with background (e.g. comments)
 color0   #232731
 # less contrast with background (e.g. status bar)
-color8   #2c323d
+color8   #2e3440
 
 # red
 color1   #BF616A
