(tmux) use cyan as active color

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -70,7 +70,7 @@ bind-key -n M-l if-shell "$is_vim" 'send-keys M-l'  'select-pane -R'
 # status bar configuration
 set -g status-position bottom
 set -g pane-border-status bottom
-set -g @activecolor 'brightcyan'
+set -g @activecolor 'cyan'
 set -g @bordercolor 'colour8'
 set -g @standoutcolor 'brightyellow'
 set -g @bgcolor 'terminal'
