(tmux) refactor internet status text in statusline

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -95,7 +95,7 @@ set -g status-right "#[bg=terminal,fg=colour15,bold] ＋ #[bg=terminal,fg=colour
 bind-key -T root MouseDown1StatusRight new-window -c "#{pane_current_path}"
 set -g status-left-length 999
 set -g status-right-length 999
-set -g status-left "#[bg=#{@bgcolor},fg=terminal] #S#{?#{m/r:tty[0-9]*,#{client_tty}}, #[fg=colour15]∙#[fg=terminal] %A#, %B %-e %H:%M#{?#{battery_percentage}, #[fg=colour15]∙#[fg=terminal] #[fg=colour3]⌁#[fg=terminal]#{battery_percentage},} #[fg=colour15]∙#{?#{==:#{online_status},online},#[fg=colour4],#[fg=colour1]} 🜃 #[fg=terminal]#{online_status},} #{tmux_mode_indicator}"
+set -g status-left "#[bg=#{@bgcolor},fg=terminal] #S#{?#{m/r:tty[0-9]*,#{client_tty}}, #[fg=colour15]∙#[fg=terminal] %A#, %B %-e %H:%M#{?#{battery_percentage}, #[fg=colour15]∙#[fg=terminal] #[fg=colour3]⌁#[fg=terminal]#{battery_percentage},} #[fg=colour15]∙#{?#{==:#{online_status},online},#[fg=colour4] 🜃 #[fg=terminal]online,#[fg=colour1] 🜃 #[fg=terminal]offline},} #{tmux_mode_indicator}"
 
 # Windows
 set -g status-justify right
