--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -100,7 +100,7 @@ set -g status-left "#[bg=#{@bgcolor},fg=terminal] #S#{?#{m/r:tty[0-9]*,#{client_
 # Windows
 set -g status-justify right
 set -g window-status-format "#[fg=terminal] #W "
-set -g window-status-current-format " #[fg=terminal,underscore]#W#{?window_zoomed_flag,#[fg=#{@standoutcolor}] [MAX],}#[nounderscore] "
+set -g window-status-current-format " #[fg=terminal,underscore]#W#{?window_zoomed_flag,#[fg=#{@standoutcolor}#,nounderscore] [MAX],}#[nounderscore] "
 set -g window-status-separator "#[bg=terminal,fg=colour8] "
 
 set -g popup-border-lines heavy
