--- a/install/install.conf.yaml
+++ b/install/install.conf.yaml
@@ -18,7 +18,7 @@
 - link:
     ~/.tmux.conf: tmux/tmux.conf
     ~/.vim/vimrc: vim/vimrc
-    ~/.config/nvim/init.vim: neovim/init.vim
+    ~/.config/nvim/init.lua: neovim/init.lua
     ~/.config/nvim/profiles: neovim/profiles
     ~/.local/share/nvim/vim-plug-snapshot.vim: neovim/vim-plug-snapshot.vim
     ~/.gitconfig: git/gitconfig
