--- a/kitty/day-theme.conf
+++ b/kitty/day-theme.conf
@@ -1,134 +1,77 @@
 # Solarized Light
-# taken from: https://github.com/dexpota/kitty-themes/blob/master/themes/Solarized_Light.conf
-background            #fdf6e3
-foreground            #52676f
-cursor                #52676f
-# should match color8
-selection_background  #eee8d5
+
+# Terminal
+########################################
+# Darker than color7
+foreground #52676f
+# Should match color0
+background #fdf6e3
+# Let selected text retain its color
 selection_foreground  none
+# Should match color8
+selection_background #eee8d5
 url_color #cb4b16
+# Should match foreground
+cursor #52676f
+
+# Blacks
+########################################
+# Background
 color0 #fdf6e3
-color8 #eee8d5
-color1 #dc322f
-color9 #dc322f
-color2 #859900
-color10 #859900
-color3 #b58900
-color11 #cb4b16
-color4 #268bd2
-color12 #268bd2
-color5 #d33682
-color13 #6c71c4
-color6 #2aa198
-color14 #2aa198
-color7 #262626
-color15 #9d9e99
+# Statusline, current line highlighting
+color8 #efead9
+# Floats
+color16 #fbedca
+# Darker than color0 -- folded lines
+color24 #fcf1d5
+# Floats
+color32 #efead9
+
+# Reds
+########################################
+color1   #dc322f
+color9   #dc322f
+# Background color for the non-emphasized part of a removed line in a git diff
 color17 #FFD7D7
+# Background color for the emphasized part of a removed line in a git diff
+color25 #FFAFAF
+
+# Greens
+########################################
+color2   #859900
+color10  #859900
+# Background color for the non-emphasized part of an added line in a git diff
 color18 #D7FFD7
+# Background color for the emphasized part of an added line in a git diff
+color26 #96D596
 
-# # Sublime Merge Light Theme
-# background            #f9fafa
-# foreground            #121214
-# cursor                #52676f
-# # should match color8
-# selection_background  #ebedef
-# selection_foreground  none
-# url_color #d75f00
-# color0 #f9fafa
-# color8 #ebedef
-# color1 #de3d3b
-# color9 #de3d3b
-# color2 #5f8700
-# color10 #5f8700
-# color3 #ff8902
-# color11 #ff8902
-# color4 #407fbf
-# color12 #67b2e9
-# color5 #ca9cd0
-# color13 #ca9cd0
-# color6 #00afaf
-# color14 #00afaf
-# color7 #121214
-# color15 #5f7479
-# color17 #FFD7D7
-# color18 #D7FFD7
+# Yellows
+########################################
+color3   #b58900
+# Orange
+color11  #cb4b16
 
-# # Light Owl Colorscheme
-# background            #FBFBFB
-# foreground            #403f53
-# # should match foreground
-# cursor                #403f53
-# # should match color8
-# selection_background  #e8e8e8
-# selection_foreground  none
-# url_color #9750BE
-# color0 #a5a5a5
-# color8 #e8e8e8
-# color1 #de3d3b
-# color9 #de3d3b
-# color2 #08916a
-# color10 #08916a
-# color3 #daaa01
-# color11 #fd8556
-# color4 #288ed7
-# color12 #288ed7
-# color5 #9750BE
-# color13 #9750BE
-# color6 #2AA298
-# color14 #403f53
-# color7 #403f53
-# color15 #403f53
+# Blues
+########################################
+color4  #268bd2
+color12 #268bd2
 
-# Nord Light Colorscheme
-# background            #eceff4
-# foreground            #4c566a
-# # should match foreground
-# cursor                #4c566a
-# # should match color8
-# selection_background  #d8dee9
-# selection_foreground  none
-# url_color #9750BE
-# color0 #a5a5a5
-# color8 #d8dee9
-# color1 #bf616a
-# color9 #bf616a
-# color2 #6c894d
-# color10 #6c894d
-# color3 #daaa01
-# color11 #d08770
-# color4 #288ed7
-# color12 #288ed7
-# color5 #8e5783
-# color13 #8e5783
-# color6 #378172
-# color14 #4c566a
-# color7 #4c566a
-# color15 #4c566a
+# Magentas
+########################################
+color5   #d33682
+color13  #6c71c4
+# Background color for a moved line in a git diff (source of move)
+color21 #e99ac0
 
-# # Seoul256 Light Colorscheme
-# background            #eaeaea
-# foreground            #4e4e4e
-# # should match foreground
-# cursor                #4e4e4e
-# # should match color8
-# selection_background  #C6C6C6
-# selection_foreground  none
-# url_color #875f87
-# color0 #8a8a8a
-# color1 #af5f5f
-# color2 #5f885f
-# color3 #af8760
-# # This blue is darker
-# # color4 #2b6fc2
-# color4 #5f87ae
-# color5 #875f87
-# color6 #5f8787
-# color7 #4e4e4e
-# color8 #C6C6C6
-# color9 #870100
-# color10 #005f00
-# color11 #d8865f
-# color12 #0087af
-# color13 #87025f
-# color14 #0087af
-# color15 #4e4e4e
+# Cyans
+########################################
+color6   #2aa198
+color14  #2aa198
+# Background color for a moved line in a git diff (destination of move)
+color22 #85dfd8
+
+# Whites
+########################################
+color7   #262626
+# Darker than color8 -- comments
+color15  #9d9e99
