--- a/kitty/night-theme.conf
+++ b/kitty/night-theme.conf
@@ -1,46 +1,77 @@
-# Nord Colorscheme for Kitty
-# Based on:
-# - https://gist.github.com/marcusramberg/64010234c95a93d953e8c79fdaf94192
-# - https://github.com/arcticicestudio/nord-hyper
+# Nord
 
-foreground            #D8DEE9
-background            #232731
+# Terminal
+########################################
+# Lighter than color7
+foreground #D8DEE9
+# Should match color0
+background #232731
+# Let selected text retain its color
 selection_foreground  none
-# should match color8
-selection_background  #2e3440
-url_color             #0087BD
-cursor                #D8DEE9
+# Should match color8
+selection_background #2e3440
+url_color #0087BD
+# Should match foreground
+cursor #D8DEE9
 
-# black
-# more contrast with background (e.g. comments)
-color0   #232731
-# less contrast with background (e.g. status bar)
-color8   #2e3440
+# Blacks
+########################################
+# Background
+color0 #232731
+# Lighter than color24 -- status bar, current line highlighting
+color8 #2e3440
+# Darker than color0 -- floats
+color16 #20232d
+# Lighter than color0 -- folded lines
+color24 #282c38
+# Darker than color16 -- floats
+color32 #1d2129
 
-# red
+# Reds
+########################################
 color1   #BF616A
 color9   #BF616A
+# Background color for the non-emphasized part of a removed line in a git diff
+color17 #5F0000
+# Background color for the emphasized part of a removed line in a git diff
+color25 #B10A0B
 
-# green
+# Greens
+########################################
 color2   #A3BE8C
 color10  #A3BE8C
+# Background color for the non-emphasized part of an added line in a git diff
+color18 #083e16
+# Background color for the emphasized part of an added line in a git diff
+color26 #117C2D
 
-# yellow
+# Yellows
+########################################
 color3   #EBCB8B
-color11  #EBCB8B
+# Orange
+color11  #d08770
 
-# blue
+# Blues
+########################################
 color4  #81A1C1
 color12 #81A1C1
 
-# magenta
+# Magentas
+########################################
 color5   #B48EAD
 color13  #B48EAD
+# Background color for a moved line in a git diff (source of move)
+color21 #60405a
 
-# cyan
+# Cyans
+########################################
 color6   #88C0D0
 color14  #8FBCBB
+# Background color for a moved line in a git diff (destination of move)
+color22 #306a7b
 
-# white
+# Whites
+########################################
 color7   #E5E9F0
+# Lighter than color8 -- comments
 color15  #626f89
