(tmux) remove the 'new tab' button

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -91,7 +91,7 @@ set -g message-style "bg=#{@bgcolor},fg=#{@standoutcolor}"
 set -g status-interval 1
 set -g status on
 set -g status-style "bg=#{@bgcolor},fg=#{@bordercolor}"
-set -g status-right "#[bg=terminal,fg=colour15,bold] ＋ #[bg=terminal,fg=colour0]"
+set -g status-right ""
 bind-key -T root MouseDown1StatusRight new-window -c "#{pane_current_path}"
 set -g status-left-length 999
 set -g status-right-length 999
