(tmux) status bar styling
Windows are centered and the tty-only section got moved to the right.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -72,7 +72,7 @@ set -g status-position bottom
 set -g pane-border-status bottom
 set -g @activecolor 'cyan'
 set -g @bordercolor 'colour8'
-set -g @standoutcolor 'brightyellow'
+set -g @standoutcolor 'yellow'
 set -g @bgcolor 'terminal'
 
 # Panes
@@ -91,15 +91,16 @@ set -g message-style "bg=#{@bgcolor},fg=#{@standoutcolor}"
 set -g status-interval 1
 set -g status on
 set -g status-style "bg=#{@bgcolor},fg=#{@bordercolor}"
-set -g status-right "#{?#{m/r:tty[0-9]*,#{client_tty}},#[fg=terminal] %a#, %b %-e %H:%M#{?#{battery_percentage}, #[fg=colour15]∙#[fg=terminal] #[fg=colour3]⌁#[fg=terminal]#{battery_percentage},} #[fg=colour15]∙#{?#{==:#{online_status},online},#[fg=colour4] 🜃 #[fg=terminal]online,#[fg=colour1] 🜃 #[fg=terminal]offline},}"
+set -g status-right "#{?#{m/r:tty[0-9]*,#{client_tty}},#[fg=terminal] %a#, %b %-e %H:%M#{?#{battery_percentage}, #[fg=colour8]|#[fg=terminal] #[fg=colour3]⌁#[fg=terminal]#{battery_percentage},} #[fg=colour8]|#{?#{==:#{online_status},online},#[fg=colour4] 🜃 #[fg=terminal]online,#[fg=colour1] 🜃 #[fg=terminal]offline},#[bg=terminal,fg=colour15,bold] ＋#[bg=terminal,fg=colour0]} "
+bind-key -T root MouseDown1StatusRight new-window -c "#{pane_current_path}"
 set -g status-left-length 999
 set -g status-right-length 999
-set -g status-left "#[bg=colour8,fg=terminal] #S #{tmux_mode_indicator}"
+set -g status-left "#[bg=#{@bgcolor},fg=terminal] #S #{tmux_mode_indicator}"
 
 # Windows
-set -g status-justify right
-set -g window-status-format "#[fg=terminal] #W "
-set -g window-status-current-format " #[fg=terminal,underscore]#W#{?window_zoomed_flag,#[fg=#{@standoutcolor}#,nounderscore] [MAX],}#[nounderscore] "
+set -g status-justify absolute-centre
+set -g window-status-format "#[fg=colour15] #W "
+set -g window-status-current-format " #[fg=terminal,italics]#W#{?window_zoomed_flag,#[fg=#{@standoutcolor}#,nounderscore] [MAX],}#[nounderscore] "
 set -g window-status-separator "#[bg=terminal,fg=colour8] "
 
 set -g popup-border-lines heavy
