(tmux) add fold marker

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,5 +1,6 @@
 # vim:foldmethod=marker
 
+# Miscellaneous {{{
 # allow mouse use
 set-option -g mouse on
 # let colors pass through
@@ -65,6 +66,7 @@ bind-key -n M-h if-shell "$is_vim" 'send-keys M-h'  'select-pane -L'
 bind-key -n M-j if-shell "$is_vim" 'send-keys M-j'  'select-pane -D'
 bind-key -n M-k if-shell "$is_vim" 'send-keys M-k'  'select-pane -U'
 bind-key -n M-l if-shell "$is_vim" 'send-keys M-l'  'select-pane -R'
+# }}}
 
 # Aesthetics {{{
 # status bar configuration
