--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -51,6 +51,16 @@ bind-key -n M-Left resize-pane -L
 bind-key -n M-Right resize-pane -R
 bind-key -n M-Up resize-pane -U
 bind-key -n M-Down resize-pane -D
+# switch windows with alt+<window number>
+bind-key -n M-1 select-window -t 1
+bind-key -n M-2 select-window -t 2
+bind-key -n M-3 select-window -t 3
+bind-key -n M-4 select-window -t 4
+bind-key -n M-5 select-window -t 5
+bind-key -n M-6 select-window -t 6
+bind-key -n M-7 select-window -t 7
+bind-key -n M-8 select-window -t 8
+bind-key -n M-9 select-window -t 9
 
 # popup
 bind -n M-t if-shell -F '#{==:#{session_name},popup}' {
@@ -101,9 +111,9 @@ set -g status-left "#[bg=#{@bgcolor},fg=terminal] #S #{tmux_mode_indicator}"
 
 # Windows
 set -g status-justify absolute-centre
-set -g window-status-format "#[fg=colour15] #W "
-set -g window-status-current-format " #[fg=terminal,italics]#W#{?window_zoomed_flag,#[fg=#{@standoutcolor}#,nounderscore] [MAX],}#[nounderscore] "
-set -g window-status-separator "#[bg=terminal,fg=colour8] "
+set -g window-status-format "#[fg=colour15] #I #W "
+set -g window-status-current-format " #[fg=terminal,italics]#I #W#{?window_zoomed_flag,#[fg=#{@standoutcolor}#,nounderscore] [MAX],}#[nounderscore] "
+set -g window-status-separator "#[bg=terminal,fg=colour8]  "
 
 set -g popup-border-lines heavy
 set -g popup-border-style "fg=#{@bordercolor}"
