--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -7,9 +7,9 @@
 #: characters.
 
 font_family      Source Code Pro Medium
-bold_font        Source Code Pro Medium Bold
+bold_font        Source Code Pro Bold
 italic_font      Source Code Pro Medium Italic
-bold_italic_font Source Code Pro Medium Bold Italic
+bold_italic_font Source Code Pro Bold Italic
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
@@ -46,7 +46,7 @@ font_size 12
 #: support, because it will force kitty to always treat the text as
 #: LTR, which FriBidi expects for terminals.
 
-adjust_line_height  115%
+adjust_line_height  120%
 adjust_column_width 104%
 
 #: Change the size of each character cell kitty renders. You can use
@@ -759,7 +759,7 @@ hide_window_decorations yes
 
 #: The foreground and background colors
 
-background_opacity .99
+background_opacity .97
 
 #: The opacity of the background. A number between 0 and 1, where 1 is
 #: opaque and 0 is fully transparent.  This will only work if
