--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -44,7 +44,7 @@ bind-key -n M-L next-window
 bind-key -n M-m resize-pane -Z
 # change highlight color
 set -g mode-style "fg=terminal,bg=colour8"
-set -g fill-character ' '
+set -g fill-character '╱'
 bind-key -n M-s choose-tree -ZsN
 # resize panes
 bind-key -n M-Left resize-pane -L
