--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -89,7 +89,7 @@ set -g @bgcolor 'terminal'
 
 # Panes
 set -g pane-border-lines single
-set -g pane-active-border-style "fg=#{@activecolor},dim"
+set -g pane-active-border-style "fg=terminal,dim"
 set -g pane-border-style "fg=#{@bordercolor}"
 
 # Clock Mode
