(kitty) change git diff colors for night theme

--- a/kitty/night-theme.conf
+++ b/kitty/night-theme.conf
@@ -32,18 +32,18 @@ color32 #1d2129
 color1   #BF616A
 color9   #BF616A
 # Background color for the non-emphasized part of a removed line in a git diff
-color17 #5F0000
+color17 #301a1f
 # Background color for the emphasized part of a removed line in a git diff
-color25 #B10A0B
+color25 #803030
 
 # Greens
 ########################################
 color2   #A3BE8C
 color10  #A3BE8C
 # Background color for the non-emphasized part of an added line in a git diff
-color18 #083e16
+color18 #12261e
 # Background color for the emphasized part of an added line in a git diff
-color26 #117C2D
+color26 #1d572c
 
 # Yellows
 ########################################
