(kitty) changing this to control affects applications in the terminal too so nevermind

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -58,9 +58,9 @@ wayland_titlebar_color background
 
 #: Copy and clear the selection or send an interrupt if there is
 #: no selection.
-map ctrl+c copy_and_clear_or_interrupt
+map mod+c copy_and_clear_or_interrupt
 
-map ctrl+v paste_from_clipboard
+map mod+v paste_from_clipboard
 
 # load colorscheme
 include current-theme.conf
